# codex

./: AGENTS.md
backend/: .env.example  .gitignore  Dockerfile  Procfile  README.md  conftest.py  entrypoint.py  manage.py  nixpacks.toml  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
backend/apps/api/: serializers.py  serializers_recommendations.py  urls.py  validators.py  views.py  views_recommendations.py
backend/apps/api/tests/: test_recommendation_views.py
backend/apps/catalog/: admin.py  models.py  permissions.py  services.py
backend/apps/catalog/management/commands/: import_seed_data.py
backend/apps/catalog/migrations/: 0001_initial.py  0002_rename_catalog_pro_title_a3e498_idx_catalog_pro_title_c91890_idx_and_more.py  0003_add_publisher_representatives_and_contribution_type.py  0004_community_notes.py  0005_contribution_claimed_at_contribution_claimed_by_and_more.py  0006_gamesystem_logo_url_gamesystem_website_url_and_more.py  0007_recommendation_models.py
backend/apps/catalog/tests/: test_follow_models.py  test_recommendations.py
backend/apps/core/: storage.py  throttling.py
backend/apps/users/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/management/commands/: verify_email.py
backend/apps/users/migrations/: 0001_initial.py  0002_add_hashed_api_token.py  0003_user_approved_contribution_count_and_more.py  0004_userfollow.py
backend/apps/users/tests/: test_user_follows.py
backend/codex/: asgi.py  urls.py  wsgi.py
backend/codex/settings/: __init__.py  base.py  local.py.example  production.py
docs/: CAMPAIGNS_ROADMAP.md  DEPLOYMENT.md  (+12 more)
(+77 files in other folders)
